# gww-anomalies

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  funcs.py  main.py  pyproject.toml  requirements.txt  test_reservoirs.txt
gww_anomalies/: __init__.py  cli.py  climatology.py  gww_api.py  log.py  main.py  utils.py
scripts/: create_climatology_file.py
scripts/archive/: main.py  reservoir_climatology.py
tests/: test_climatology.py  test_main.py  test_utils.py
