[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gww_anomalies"
authors = [{name = "Hessel Winsemius", email = "hessel.winsemius@deltares.nl" },{name = "Tjalling de Jong", email = "tjalling.dejong@deltares.nl"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "geopandas",
    "google-cloud-storage",
    "platformdirs",
    "tqdm"
    ]



[project.urls]
Home = "https://github.com/Deltares/gww_anomalies"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
ignore = ["DTZ005", "DTZ001"]
exclude = ["scripts"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "PT001", "ANN201", "S101", "PLR2004"]